--- a/displayJSON/displayJSON/Views/Home/Index.cshtml
+++ b/displayJSON/displayJSON/Views/Home/Index.cshtml
@@ -1,1 +1,3 @@
-﻿<h2>Welcome to ASP.NET MVC @ViewData["Version"] on @ViewData["Runtime"]!</h2>
+﻿<div style="margin-top:20px">
+    @Html.Partial("EmpDetails");
+</div>
